# pydantic-ai-deepagents

./: README.md  main.py  pyproject.toml
example_skills/code-review/: SKILL.md
example_skills/data-analysis/: SKILL.md
example_skills/web-research/: SKILL.md
examples/: skills_usage.py
src/pydantic_ai_deepagents/: __init__.py  agent.py  context.py  deps.py  prompt.py  run.py  skills.py
src/pydantic_ai_deepagents/tools/: context.py  filesystem.py  planning.py  shell.py  skills.py  subagent.py
