[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_deepagents"]

[project]
name = "pydantic-ai-deepagents"
version = "0.1.0"
description = "Deep agents built with pydantic-ai"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "wdg" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pydantic-ai"]

[project.urls]
Repository = "https://github.com/willemdg/pydantic-ai-deepagents"

[dependency-groups]
dev = ["ruff", "ty"]
